sample-go-app/clouds-api/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: clouds-api
  name: clouds-api
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: clouds-api
